Missing checks for m_physicsController #37964

Closed
opened 2013-12-27 17:31:13 +01:00 by Angus Hollands · 10 comments

I don't see the need for system information as the case of the bug is quite evident.

Some changes to the physics code in KX_GameObject missed the reason for defining SuspendDynamics and RestoreDynamics on the KX_GameObject. One must check that one has a physics controller before calling these methods.

I cannot easily provide a patch because I'm using a heavily modified distribution of Blender.
Assigning to Moguri.

I don't see the need for system information as the case of the bug is quite evident. Some changes to the physics code in KX_GameObject missed the reason for defining SuspendDynamics and RestoreDynamics on the KX_GameObject. One must check that one has a physics controller *before* calling these methods. I cannot easily provide a patch because I'm using a heavily modified distribution of Blender. Assigning to Moguri.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Mitchell Stokes was assigned by Angus Hollands 2013-12-27 17:31:13 +01:00
Author

Added subscriber: @AngusHollands-4

Added subscriber: @AngusHollands-4

Could you at least state which functions are missing checks?

Could you at least state which functions are missing checks?
Author

It is the stated functions in the game object source file. They used to call suspend on the object which checked for a physics controller and then suspended the object

It is the stated functions in the game object source file. They used to call suspend on the object which checked for a physics controller and then suspended the object
Author

It is the stated functions in the game object source file. They used to call suspend on the object which checked for a physics controller and then suspended the object

It is the stated functions in the game object source file. They used to call suspend on the object which checked for a physics controller and then suspended the object

It looks like PySuspendDynamics() and PyRestoreDynamics() in KX_GameObject are the only ones not performing a check. All other uses of PHY_IPhysicsController::Restore/SuspendDynamics() appear to be properly guarded.

It looks like PySuspend/RestoreDynamics() should instead call KX_GameObject::Resume/Suspend(). Does this line up with your findings?

It looks like PySuspendDynamics() and PyRestoreDynamics() in KX_GameObject are the only ones not performing a check. All other uses of PHY_IPhysicsController::Restore/SuspendDynamics() appear to be properly guarded. It looks like PySuspend/RestoreDynamics() should instead call KX_GameObject::Resume/Suspend(). Does this line up with your findings?

This issue was referenced by blender/blender-addons-contrib@f3c7cb02b2

This issue was referenced by blender/blender-addons-contrib@f3c7cb02b2a5e7b7ee780b598a73b08bf39dae76

This issue was referenced by f3c7cb02b2

This issue was referenced by f3c7cb02b2a5e7b7ee780b598a73b08bf39dae76

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit f3c7cb02b2.

Closed by commit f3c7cb02b2.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#37964
No description provided.