Fix T37964: KX_GameObject missing NULL checks for m_physicsController.

KX_GameObject::PySuspendDynamics() and KX_GameObjectPyRestoreDynamics()
now make sure GetPhysicsController() is non NULL before attempting
to use it.